Ajustes no endpoit de update para Appointments e iniciado integração com firebase
