# backend/src/models/dtos/PostAppointmentRequest.ts
@@ -1,4 +1,4 @@
-export interface AppointmentRequest {
+export interface PostAppointmentRequest {
   scheduledAt: Date,
   idPatient: number,
   idCareProfessional: number,
