# backend/src/models/dtos/PutAppointmentRequest.ts
@@ -1,0 +1,7 @@
+import { AppointmentStatus } from "../enums/AppointmentStatus"
+
+export interface PutAppointmentRequest {
+  scheduledAt: Date,
+  status: AppointmentStatus,
+  idAdress: number
+}
